# margolus

./: .gitignore  Margolus.cabal  README.md  margolus.cabal
app/: GenerateBlankRules.hs  Main.hs
src/: Engine.hs  Freeze.hs  GenerateBlankRules.hs  Main.hs  Sand.hs  Simple.hs
src/Margolus/: Evaluator.hs  Types.hs
src/Margolus/Rules/: Sand.hs  Simple.hs  Water.hs
