name:                margolus
version:             0.1.0.0
synopsis:            "Margolus neighborhood" cellular automata simulation
description:         A simple "Margolus neighborhood" cellular automata non-interactive simulation
license:             MIT
license-file:        LICENSE
author:              Aleksey Pirogov
maintainer:          astynax84@gmail.com
copyright:           astynax (2019)
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable margolus
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base
                     , margolus
  default-language:    Haskell2010

executable generate-blank-rules
  main-is:             GenerateBlankRules.hs
  hs-source-dirs:      app
  build-depends:       base
                     , margolus
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Margolus.Evaluator
                     , Margolus.Rules.Sand
                     , Margolus.Rules.Simple
                     , Margolus.Rules.Water
                     , Margolus.Types
  build-depends:       base
  default-language:    Haskell2010
